Fix Spacing On Mobile

--- a/react/MegaMenu/styles.css
+++ b/react/MegaMenu/styles.css
@@ -310,6 +310,7 @@
 .submenuListVertical {
   display: flex;
   flex-direction: column;
+  padding-bottom: 1.5rem;
 }
 
 .submenuListVertical .seeAllLinkContainer {
